<resources>
    <string name="app_name">4 Pics 1 Word</string>
    
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="share">Share</string>
    <string name="more_games">More Games</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="reset_the_level">Reset the level</string>
    <string name="settings">Settings</string>
    <string name="continue_game">Continue</string>
    <string name="the_answer_was">The answer was:</string>
    <string name="prompt">Prompt</string>
    <string name="warning">Are you sure that result the game levels?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>



</resources>